--- a/css/styles.css
+++ b/css/styles.css
@@ -36,3 +36,7 @@ body#skreeee {
 body#tondekei {
     background-image: url("../img/bg/background_Hall.jpg");
 }
+
+body#dingdong {
+    background-image: url("../img/bg/background_Track_Morning.jpg");
+}
